Makes modal dropdown appear in the correct place on a scrolling page
On a longer page that scrolls, the modal dropdown (which appears when an
iscDropdown is clicked open) was appearing in the wrong place, often
offscreen. The changes to iscDropdownSelectionList.js address this.

When multiple iscDropdowns are stacked next to each other, as in a form,
there was a problem with the modal dropdown being obscured by other
non-activated iscDropdowns nearby. So pushing the z-index out for the
modal dropdown addresses this.

--- a/src/assets/sass/isc/_isc-dropdown.scss
+++ b/src/assets/sass/isc/_isc-dropdown.scss
@@ -46,6 +46,7 @@ $color-darkGrey: #8e9294;
 	left:550px;
 	visibility: visible;
 	border:1px solid $app-border-color;
+    z-index: 1000000 !important;
 }
 
 .isc-dropdown-btn{
@@ -81,6 +82,8 @@ $color-darkGrey: #8e9294;
   text-decoration:none;
   text-shadow:none;
   color:darken( $brand-secondary, 60 );
+
+  z-index: 1000000 !important;
 }
 
 .isc-dropdown-hidden{
